<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_large"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        tools:text="INGREDIENTS:"/>

    <TextView
        android:id="@+id/ingredients_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_large"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        />

</LinearLayout>