...
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            style="@style/TextDescription"
            tools:text="Example" />


        <Button
            android:id="@+id/next_button"
            android:layout_width="@dimen/button_size"
            android:layout_height="wrap_content"
            android:onClick="onClickNextStep"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/devide"
            android:layout_margin="@dimen/padding_medium"
...
